// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`snippet: #0 [babel] format 1`] = `
"Only properties and spread elements are allowed in record definitions. (1:3)
> 1 | #{a() {}}
    |   ^"
`;

exports[`snippet: #0 [espree] format 1`] = `
"Unexpected character '#' (1:1)
> 1 | #{a() {}}
    | ^"
`;

exports[`snippet: #0 [meriyah] format 1`] = `
"[1:1]: '#' not followed by identifier (1:1)
> 1 | #{a() {}}
    | ^"
`;

exports[`snippet: #1 [babel] format 1`] = `
"Only properties and spread elements are allowed in record definitions. (1:3)
> 1 | #{async b() {}}
    |   ^"
`;

exports[`snippet: #1 [espree] format 1`] = `
"Unexpected character '#' (1:1)
> 1 | #{async b() {}}
    | ^"
`;

exports[`snippet: #1 [meriyah] format 1`] = `
"[1:1]: '#' not followed by identifier (1:1)
> 1 | #{async b() {}}
    | ^"
`;

exports[`snippet: #2 [babel] format 1`] = `
"Only properties and spread elements are allowed in record definitions. (1:3)
> 1 | #{get c() {}}
    |   ^"
`;

exports[`snippet: #2 [espree] format 1`] = `
"Unexpected character '#' (1:1)
> 1 | #{get c() {}}
    | ^"
`;

exports[`snippet: #2 [meriyah] format 1`] = `
"[1:1]: '#' not followed by identifier (1:1)
> 1 | #{get c() {}}
    | ^"
`;

exports[`snippet: #3 [babel] format 1`] = `
"Only properties and spread elements are allowed in record definitions. (1:3)
> 1 | #{set d(_) {}}
    |   ^"
`;

exports[`snippet: #3 [espree] format 1`] = `
"Unexpected character '#' (1:1)
> 1 | #{set d(_) {}}
    | ^"
`;

exports[`snippet: #3 [meriyah] format 1`] = `
"[1:1]: '#' not followed by identifier (1:1)
> 1 | #{set d(_) {}}
    | ^"
`;

exports[`snippet: #4 [babel] format 1`] = `
"Only properties and spread elements are allowed in record definitions. (1:3)
> 1 | #{*e() {}}
    |   ^"
`;

exports[`snippet: #4 [espree] format 1`] = `
"Unexpected character '#' (1:1)
> 1 | #{*e() {}}
    | ^"
`;

exports[`snippet: #4 [meriyah] format 1`] = `
"[1:1]: '#' not followed by identifier (1:1)
> 1 | #{*e() {}}
    | ^"
`;
